trend tile alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ flex-direction: column;
 
 /*TREND-TILE*/
 .trend-tile{
-width: auto;
+width: 103%;
 height: 135px;
 }
 
